changed layout depending on album genre

--- a/app/src/main/res/layout/activity_album_info.xml
+++ b/app/src/main/res/layout/activity_album_info.xml
@@ -4,22 +4,32 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:theme="@style/AppTheme"
     tools:context="pl.edu.pwr.nr238367.albumlist.AlbumInfoActivity">
+
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="?toolbarColor"
+        android:minHeight="?attr/actionBarSize"
+        app:navigationIcon="?attr/homeAsUpIndicator" />
 
     <ImageView
         android:id="@+id/albumCoverLarge"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:background="?attr/topColor"
         android:contentDescription="@string/album_cover_label"
+        android:paddingEnd="8dp"
+        android:paddingStart="8dp"
+        android:paddingTop="8dp"
         android:scaleType="fitCenter"
         app:layout_constraintBottom_toTopOf="@+id/albumTitle"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/guidelineTop"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar"
         app:layout_constraintVertical_weight="5"
         app:srcCompat="@mipmap/ic_launcher" />
 
@@ -27,9 +37,10 @@
         android:id="@+id/albumGenre"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
+        android:background="?attr/topColor"
+        android:paddingBottom="8dp"
+        android:paddingEnd="8dp"
+        android:paddingStart="8dp"
         android:text="@string/album_genre_placeholder"
         android:textAlignment="center"
         android:textAppearance="@android:style/TextAppearance.Material.Medium"
@@ -58,8 +69,9 @@
         android:id="@+id/albumTitle"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
+        android:background="?attr/topColor"
+        android:paddingEnd="8dp"
+        android:paddingStart="8dp"
         android:text="@string/album_name_placeholder"
         android:textAlignment="center"
         android:textAppearance="@android:style/TextAppearance.Material.Large"
@@ -74,8 +86,9 @@
         android:id="@+id/albumArtist"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
+        android:background="?attr/topColor"
+        android:paddingEnd="8dp"
+        android:paddingStart="8dp"
         android:text="@string/artist_name_placeholder"
         android:textAlignment="center"
         android:textAppearance="@android:style/TextAppearance.Material.Medium"
@@ -90,27 +103,29 @@
         android:id="@+id/sliding_tabs"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:background="@color/colorPrimaryLight"
+        android:background="?bottomColor"
+        android:paddingEnd="8dp"
+        android:paddingStart="8dp"
+        android:paddingTop="8dp"
         app:layout_constraintBottom_toTopOf="@+id/viewpager"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/albumGenre"
-        app:tabMode="fixed"
-        app:tabSelectedTextColor="#fff"
-        app:tabTextColor="#fff" />
+        app:tabBackground="?attr/selectableItemBackground"
+        app:tabIndicatorColor="?topColor"
+        app:tabMode="fixed" />
 
     <android.support.v4.view.ViewPager
         android:id="@+id/viewpager"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
         android:layout_weight="1"
+        android:background="?bottomColor"
+        android:paddingBottom="8dp"
+        android:paddingEnd="8dp"
+        android:paddingStart="8dp"
+        android:paddingTop="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
