--- a/app/src/main/res/layout-land/activity_album_info.xml
+++ b/app/src/main/res/layout-land/activity_album_info.xml
@@ -6,20 +6,31 @@
     android:layout_height="match_parent"
     tools:context="pl.edu.pwr.nr238367.albumlist.AlbumInfoActivity">
 
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="?toolbarColor"
+        android:minHeight="?attr/actionBarSize"
+        android:theme="?attr/actionBarTheme"
+        app:navigationIcon="?attr/homeAsUpIndicator" />
+
     <ImageView
         android:id="@+id/albumCoverLarge"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:background="?topColor"
         android:contentDescription="@string/album_cover_label"
+        android:paddingBottom="8dp"
+        android:paddingEnd="8dp"
+        android:paddingStart="8dp"
+        android:paddingTop="8dp"
         android:scaleType="fitCenter"
         app:layout_constraintBottom_toTopOf="@+id/albumTitle"
         app:layout_constraintEnd_toStartOf="@+id/guideline"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar"
         app:layout_constraintVertical_weight="6"
         app:srcCompat="@mipmap/ic_launcher" />
 
@@ -27,9 +38,10 @@
         android:id="@+id/albumGenre"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
+        android:background="?topColor"
+        android:paddingBottom="8dp"
+        android:paddingEnd="8dp"
+        android:paddingStart="8dp"
         android:text="@string/album_genre_placeholder"
         android:textAlignment="center"
         android:textAppearance="@android:style/TextAppearance.Material.Medium"
@@ -44,9 +56,10 @@
         android:id="@+id/albumTitle"
         android:layout_width="0dp"
         android:layout_height="40dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
+        android:background="?topColor"
         android:gravity="center_vertical"
+        android:paddingEnd="8dp"
+        android:paddingStart="8dp"
         android:text="@string/album_name_placeholder"
         android:textAlignment="center"
         android:textAppearance="@android:style/TextAppearance.Material.Large"
@@ -61,8 +74,9 @@
         android:id="@+id/albumArtist"
         android:layout_width="0dp"
         android:layout_height="33dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
+        android:background="?topColor"
+        android:paddingEnd="8dp"
+        android:paddingStart="8dp"
         android:text="@string/artist_name_placeholder"
         android:textAlignment="center"
         android:textAppearance="@android:style/TextAppearance.Material.Medium"
@@ -77,9 +91,10 @@
         android:id="@+id/viewpager"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
         android:layout_weight="1"
+        android:background="?bottomColor"
+        android:paddingBottom="8dp"
+        android:paddingTop="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -97,12 +112,11 @@
     <android.support.design.widget.TabLayout
         android:id="@+id/sliding_tabs"
         android:layout_width="0dp"
-        android:layout_height="37dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/guideline"
         app:layout_constraintTop_toTopOf="parent"
+        app:tabIndicatorColor="?topColor"
         app:tabMode="fixed" />
 
 </android.support.constraint.ConstraintLayout>
